--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 /* Hero Section */
 .hero-section {
-    background-image: url('/img/bg.jpg');
+    background-image: url('img/bg.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
