--- a/style.css
+++ b/style.css
@@ -141,8 +141,8 @@ body {
 /* Contact Section */
 .contact-section {
     padding: 80px 0;
-    background-color: #090A0C; /* Matching the project section's background */
-    height: 100vh;
+    background-color: #181818; /* Matching the project section's background */
+    height: auto;
     position: relative;
 }
 
@@ -221,7 +221,7 @@ body {
 
 /* Footer Section */
 .footer {
-    background: linear-gradient(135deg, #181818, #202020);
+    background: linear-gradient(135deg, #090A0C, #202020);
     color: #ffffff;
     padding: 60px 20px;
 }
@@ -339,5 +339,10 @@ body {
 
     .card-text {
         font-size: 0.9rem;
+    }
+
+    .contact-section h2 {
+        font-size: 2rem; /* Smaller heading size */
+        margin-bottom: 20px; /* Less margin */
     }
 }
